# basicmath_nucleof429zi

./: Cargo.toml  README.md  memory.x  openocd.gdb
src/: cubic.rs  isqrt.rs  main.rs  rad2deg.rs
