[package]
name = "basicmath_large_mibench_rust"
version = "0.1.0"
authors = ["JOE1994 <joseph942010@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.6"
cortex-m-rt = "0.6"
# stm32f4xx-hal = { git = "https://github.com/stm32-rs/stm32f4xx-hal" }
nb = "0.1"
libm = "0.2.1"
alloc-cortex-m = "0.4.0"
panic-halt = "0.2.0"

[dependencies.stm32f4xx-hal]
features = ["rt", "stm32f429", "usb_fs"]
git = "https://github.com/stm32-rs/stm32f4xx-hal"

[dependencies.embedded-hal]
features = ["unproven"]
version = "0.2"

[dev-dependencies]
panic-abort = "0.3.2"
cfg-if = "0.1.10"


[profile.release]
debug = true
lto = true
opt-level = 3
# opt-level = "s"
# codegen-units = 1
